--- a/src/screens/Step8.module.css
+++ b/src/screens/Step8.module.css
@@ -275,13 +275,15 @@
   display: flex;
   gap: 8px;
   margin-top: auto;
-  padding: 6px 6px 12px;
+  margin-bottom:0;
+  padding: 0 0;
 }
 .stepFooter button {
   flex: 1;
   height: 40px;
   line-height: 40px;
   font-size: 14px;
+  padding: 0;
   text-align: center;
   border: 1px solid #ccc;
   background: #f0f0f0;
